cross-browser, z-index fixes

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,6 +1,7 @@
 #gallery-container {
     min-height: 750px;
     width: 750px;
+    position: relative;
 }
 
     #gallery-container .photo-container {
